# hs-persona-idp

./: .travis.yml  README.md  README.rst  persona-idp.cabal  stack.yaml
src/: Command.hs  Config.hs  Init.hs  Main.hs  Middleware.hs  Provision.hs  Serve.hs  authentication.hamlet  authentication.julius  provisioning.hamlet  provisioning.julius
