name:                persona-idp
version:             0.1.0.0
synopsis:            Persona (BrowserID) Identity Provider
description:         Persona (BrowserID) Identity Provider
homepage:            https://github.com/frasertweedale/hs-persona-idp
homepage:            https://github.com/frasertweedale/hs-persona-idp/issues
license:             AGPL-3
license-file:        agpl-3.0.txt
extra-source-files:
  README.md
author:              Fraser Tweedale
maintainer:          frase@frase.id.au
copyright:           Copyright (C) 2013  Fraser Tweedale
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/frasertweedale/hs-persona-idp.git

executable persona
  default-language:    Haskell2010
  ghc-options:  -Werror -Wall
  build-depends:
    base >=4.6 && <4.7
    , bytestring == 0.10.*
    , directory == 1.2.*
    , filepath == 1.3.*
    , optparse-applicative == 0.7.*
    , scotty == 0.5.*
    , aeson == 0.6.*
    , jose == 0.1.*
    , persona == 0.1.*
  hs-source-dirs:      src
  main-is:             Main.hs
